<resources>
    <string name="app_name" translatable="false">TableTrack</string>
    <string name="welcome">¡Bienvenid@!</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_restaurant_name">Nombre del Restaurante</string>
    <string name="hint_restaurant_code">Código del Restaurante</string>
    <string name="hint_table_number">Número de mesa</string>
    <string name="forgot_password"><u>Olvidé mi contraseña</u></string>
    <string name="text_sign_up">¿No tienes cuenta?</string>
    <string name="text_forgot_password">Proporciona tu correo electrónico para restablecer la contraseña.</string>
    <string name="text_select_role">Selecciona el rol que tendrás en el local.</string>
    <string name="text_restaurant_name">Escribe un nombre para tu restaurante.</string>
    <string name="text_restaurant_code">Para unirte, ingresa el código del restaurante. Solicítalo al administrador.</string>
    <string name="text_room_size">Selecciona tamaño de la sala.</string>
    <string name="text_room_name">Ingrese nombre de la sala.</string>
    <string name="text_table_number">Ingrese número o nombre de mesa.</string>
    <string name="row">Fila</string>
    <string name="column">Columna</string>
    <string name="terms_and_conditions">He leído y acepto los <font color='#E65100'>Términos y Condiciones</font>."</string>
    <string name="button_sign_up">Registrarse</string>
    <string name="button_login">Ingresar</string>
    <string name="button_forgot_password">Enviar enlace</string>

    <string name="title_terms"><b>Términos y Condiciones</b></string>
    <string name="title_sign_up"><b>Crear cuenta</b></string>
    <string name="title_select_rol"><b>Local y Roles</b></string>
    <string name="title_forgot_password"><b>Restablecer contraseña</b></string>
    <string name="title_settings">Ajustes</string>
    <string name="title_views"><b>TITULO</b></string>
    <string name="title_create_room">Crear sala</string>
    <string name="title_create_table">Crear mesa</string>
    <string name="title_edit_table">Editar mesa</string>
    <string name="option_edit_tables">Editar mesas</string>
    <string name="option_change_view_list">Ver como lista</string>
    <string name="option_change_view_map">Ver como mapa</string>
    <string name="option_settings">Ajustes</string>
    <string name="option_logout">Cerrar sesión</string>
    <string name="add_room">Crear sala</string>
    <string name="add_table">Crear mesa</string>


    <string name="settings_font">Fuente</string>
    <string name="settings_subtitle_font">Tamaño de fuente</string>
    <string name="settings_colors">Paleta de colores</string>
    <string name="settings_subtitle_colors">Seleccionar paleta de colores</string>
    <string name="settings_team_management">Gestionar equipo</string>
    <string name="settings_subtitle_team_management">Invitar usuarios, permisos de usuario…</string>
    <string name="settings_profile">Perfil</string>
    <string name="settings_subtitle_profile">Nombre de usuario, email, contraseña</string>

    <string name="required">Campo obligatorio</string>
    <string name="failed_login">Ingreso fallido.</string>
    <string name="failed_sign_up">El email que intenta ingresar ya se encuentra en nuestros registros.</string>
    <string name="failed_database">Error en la base de datos.</string>
    <string name="please_all">Por favor, ingrese todos los datos requeridos.</string>
    <string name="please_email">Por favor, ingrese un correo electrónico válido.</string>
    <string name="please_password">La contraseña debe tener mínimo 6 caracteres.</string>
    <string name="please_terms">Por favor, acepte los Términos y Condiciones.</string>
    <string name="link_password">Se ha enviado un enlace a tu correo para restablecer la contraseña.</string>

    <string name="ok">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Guardar</string>
    <string name="delete">Eliminar</string>
    <string name="close">Cerrar</string>
    <string name="next">Siguiente</string>
    <string name="back">Volver</string>


    <string name="placeholder_username">Usuario</string>
    <string name="placeholder_email">Email</string>
    <string name="placeholder_password">Contraseña</string>
    <string name="placeholder_restaurant_name">Restaurante</string>
    <string name="placeholder_restaurant_code">Código de restaurante</string>
    <string name="placeholder_password_forgot">Restablecer contraseña</string>
    <string name="placeholder_room_name">Nombre de sala</string>
    <string name="placeholder_title_map"> </string>

    <string name="content_description_logo">Logo TableTrack</string>
    <string name="content_description_icon_user">Ícono usuario</string>
    <string name="content_description_button_add">Añadir elementos</string>
    <string name="content_description_options_menu">Menú de opciones</string>

    <string name="table_available">Disponible</string>
    <string name="table_unavailable">Ocupada</string>
    <string name="table_edit">Editar</string>
    <string name="table_delete">Eliminar</string>

    <string-array name="spinner_role_options">
        <item>- Elige rol -</item>
        <item>Administrador/a</item>
        <item>Mesero/a</item>
        <item>Recepcionista</item>
    </string-array>

    <string-array name="spinner_room_size">
        <item>3x3</item>
        <item>3x4</item>
    </string-array>

    <string-array name="rows_columns_3x3">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="rows_columns_3x4">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum laoreet tincidunt enim, quis vulputate nulla fringilla ac. Vestibulum faucibus nunc sit amet enim vulputate, at rhoncus tortor pellentesque. Aenean sit amet tristique libero. Maecenas at dui et mi iaculis rhoncus. Nullam tincidunt ornare malesuada. Donec blandit lectus nec fringilla ornare. In aliquet varius leo, in convallis nulla aliquam quis.\n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum laoreet tincidunt enim, quis vulputate nulla fringilla ac. Vestibulum faucibus nunc sit amet enim vulputate, at rhoncus tortor pellentesque. Aenean sit amet tristique libero. Maecenas at dui et mi iaculis rhoncus. Nullam tincidunt ornare malesuada. Donec blandit lectus nec fringilla ornare. In aliquet varius leo, in convallis nulla aliquam quis.\n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum laoreet tincidunt enim, quis vulputate nulla fringilla ac. Vestibulum faucibus nunc sit amet enim vulputate, at rhoncus tortor pellentesque. Aenean sit amet tristique libero. Maecenas at dui et mi iaculis rhoncus. Nullam tincidunt ornare malesuada. Donec blandit lectus nec fringilla ornare. In aliquet varius leo, in convallis nulla aliquam quis.\n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum laoreet tincidunt enim, quis vulputate nulla fringilla ac. Vestibulum faucibus nunc sit amet enim vulputate, at rhoncus tortor pellentesque. Aenean sit amet tristique libero. Maecenas at dui et mi iaculis rhoncus. Nullam tincidunt ornare malesuada. Donec blandit lectus nec fringilla ornare. In aliquet varius leo, in convallis nulla aliquam quis.\n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum laoreet tincidunt enim, quis vulputate nulla fringilla ac. Vestibulum faucibus nunc sit amet enim vulputate, at rhoncus tortor pellentesque. Aenean sit amet tristique libero. Maecenas at dui et mi iaculis rhoncus. Nullam tincidunt ornare malesuada. Donec blandit lectus nec fringilla ornare. In aliquet varius leo, in convallis nulla aliquam quis.\n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum laoreet tincidunt enim, quis vulputate nulla fringilla ac. Vestibulum faucibus nunc sit amet enim vulputate, at rhoncus tortor pellentesque. Aenean sit amet tristique libero. Maecenas at dui et mi iaculis rhoncus. Nullam tincidunt ornare malesuada. Donec blandit lectus nec fringilla ornare. In aliquet varius leo, in convallis nulla aliquam quis.\n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum laoreet tincidunt enim, quis vulputate nulla fringilla ac. Vestibulum faucibus nunc sit amet enim vulputate, at rhoncus tortor pellentesque. Aenean sit amet tristique libero. Maecenas at dui et mi iaculis rhoncus. Nullam tincidunt ornare malesuada. Donec blandit lectus nec fringilla ornare. In aliquet varius leo, in convallis nulla aliquam quis.\n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum laoreet tincidunt enim, quis vulputate nulla fringilla ac. Vestibulum faucibus nunc sit amet enim vulputate, at rhoncus tortor pellentesque. Aenean sit amet tristique libero. Maecenas at dui et mi iaculis rhoncus. Nullam tincidunt ornare malesuada. Donec blandit lectus nec fringilla ornare. In aliquet varius leo, in convallis nulla aliquam quis.</string>
</resources>