<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_background_color"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_guideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_guideline_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="95dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_guideline_1">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/vector_logo_full"
            android:contentDescription="@string/content_description_logo"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="60dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="@color/icon_color"
            android:fontFamily="@font/encode_sans_condensed"
            android:textStyle="bold"
            android:text="@string/welcome"/>

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/edittext_background"
            android:hint="@string/hint_email"
            android:inputType="text|textEmailAddress|textNoSuggestions"
            android:maxLines="1"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/icon_color"
            android:textColorHint="@color/placeholder_color"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="password"
            android:background="@drawable/edittext_background"
            android:hint="@string/hint_password"
            android:inputType="text|textPassword|textNoSuggestions"
            android:maxLines="1"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/icon_color"
            android:textColorHint="@color/placeholder_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textview_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/forgot_password"
            android:textAlignment="textStart"
            android:textColor="@color/icon_color"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/button_color"
            android:text="@string/button_login"
            android:textColor="@color/icon_color_inverse"
            android:textSize="18sp"
            app:strokeColor="#000000"
            app:strokeWidth="1dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_guideline_2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/text_sign_up"
            android:textAlignment="textEnd"
            android:textColor="@color/icon_color"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/button_color"
            android:text="@string/button_sign_up"
            android:textColor="@color/icon_color_inverse"
            android:textSize="18sp"
            app:strokeColor="#000000"
            app:strokeWidth="1dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>