<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity"
    android:background="@color/background_color">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/signup_guideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange_500"
        android:elevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/vector_chevron_left"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/title_sign_up"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/layout_account_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/signup_guideline_1">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/vector_account" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_account_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar">

        <EditText
            android:id="@+id/create_username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="15dp"
            android:autofillHints="username"
            android:background="@drawable/edittext_background"
            android:hint="@string/hint_username"
            android:inputType="textPersonName"
            android:maxLength="30"
            android:maxLines="1"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textSize="16sp"
            android:textColor="@color/icon_color"
            android:textColorHint="@color/placeholder_color" />

        <EditText
            android:id="@+id/create_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="15dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/edittext_background"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:maxLines="1"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textSize="16sp"
            android:textColor="@color/icon_color"
            android:textColorHint="@color/placeholder_color" />

        <EditText
            android:id="@+id/create_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="25dp"
            android:autofillHints="password"
            android:background="@drawable/edittext_background"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLength="30"
            android:maxLines="1"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textSize="16sp"
            android:textColor="@color/icon_color"
            android:textColorHint="@color/placeholder_color" />

        <CheckBox
            android:id="@+id/checkbox_terms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/encode_sans"
            android:backgroundTint="@color/button_color"
            android:text="@string/terms_and_conditions"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_account_2">

        <Button
            android:id="@+id/button_create_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/button_color"
            android:text="@string/button_sign_up"
            android:textColor="@color/icon_color_inverse"
            android:textSize="18sp"
            app:strokeColor="#000000"
            app:strokeWidth="1dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>