<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/background_color"
    tools:context=".ForgotPasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange_500"
        android:elevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/toolbar_guideline_start"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.1"
                />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/toolbar_guideline_end"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.9"/>
            <ImageButton
                android:id="@+id/left_button"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/vector_chevron_left"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintright_toLeftOf="@id/toolbar_guideline_start"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_forgot_password"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/toolbar_guideline_start"
                app:layout_constraintRight_toLeftOf="@id/toolbar_guideline_end"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_margin="40dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:textSize="18sp"
            android:textColor="@color/icon_color"
            android:text="@string/text_forgot_password" />

        <EditText
            android:id="@+id/create_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/edittext_background"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:maxLines="1"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textSize="16sp"
            android:textColor="@color/icon_color"
            android:textColorHint="@color/placeholder_color" />

        <Button
            android:id="@+id/ok_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/button_color"
            android:text="@string/button_forgot_password"
            android:textColor="@color/icon_color_inverse"
            android:textSize="18sp"
            app:strokeColor="#000000"
            app:strokeWidth="1dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>